front/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: front
  labels:
    app: front
spec:
  replicas: 1
  selector:
    matchLabels:
      app: front
  template:
    metadata:
      labels:
        app: front
    spec:
      containers:
        - name: front
          image: asia.gcr.io/stable-device-253005/go-grpc-microservices-front
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 80
              protocol: TCP
