front/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: front-service
  namespace: front
  labels:
    app: front
spec:
  selector:
    app: front
  type: ClusterIP
  ports:
    - name: http
      port: 80
      targetPort: http-port
      protocol: TCP
