front/destinationrule.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: front-rule
  namespace: front
spec:
  host: front-service.front.svc.cluster.local
  subsets:
    - name: v1
      labels:
        version: v1
