front/virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: front-route
  namespace: front
spec:
  hosts:
    - "*"
  gateways:
    - front-gateway
  http:
    - route:
        - destination:
            host: front-service.front.svc.cluster.local
            port:
              number: 80
            subset: v1
